2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cksum.pcx: New files. Syntax definitions for the public
	* crc16.pcx: commands of the various crc packages.
	* crc32.pcx:
	* sum.pcx:

2008-04-11  Andreas Kupries  <andreask@activestate.com>

	* crc16.man: Marked name of crc32 up as package.

2008-04-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc16.man: document the xmodem command (bug #1895277)

2008-03-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cksum.tcl (::crc::cksum): Fixed handling of options -chunksize
	* cksum.man: and -channel. Bumped version of cksum to 1.1.2.
	* pkgIndex.tcl

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sum.man: Fixed all warnings due to use of now deprecated
	* cksum.man: commands. Added a section about how to give feedback.
	* crc16.man:
	* crc32.man:

2006-11-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crcc.tcl: Silence critcl warning.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* cksum.tcl: Bumped version to 1.1.1
	* cksum.man:
	* pkgIndex.tcl:

2006-06-29  Aaron Faupell <afaupell@users.sourceforge.net>

	* cksum.tcl: fixed typo koin->join

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* cksum.test:  More boilerplate simplified via use of test support.
	* crc16.test:
	* crc32.test:
	* crc32bugs.test:
	* sum.test:
